--- a/react-next13/05-action-twitch/package.json
+++ b/react-next13/05-action-twitch/package.json
@@ -12,7 +12,10 @@
     "@prisma/client": "^5.12.1",
     "next": "14.2.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.1.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
