App con registro action-twitch final

--- a/react-next13/05-action-twitch/.env
+++ b/react-next13/05-action-twitch/.env
@@ -5,3 +5,11 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://art270112:foI5PevsvalCicds@cluster0.yfndrm9.mongodb.net/todoTwitch"
+
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=pk_test_Y29oZXJlbnQtYmx1ZWJpcmQtODkuY2xlcmsuYWNjb3VudHMuZGV2JA
+CLERK_SECRET_KEY=sk_test_9bOqb6vA21Iga2B2vU89NyffQktSNnU69qfCDhldtx
+
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=/login
+NEXT_PUBLIC_CLERK_SIGN_UP_URL=/register
+NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_URL=/
+NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_URL=/
